fix: about section overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  @apply overflow-x-hidden;
+}
+
 h1,
 h2,
 h3 {
